Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@ Python, {\color{red} $\varheartsuit$} Ruby, JavaScript, Pharo / Smalltalk, {Unix
 HTML5, CSS3, NodeJS / jQuery, Vue.js, Flask, SQLAlchemy, Ruby on Rails, PHP, Laravel, Wordpress   
 %
 \section{tecnologías misceláneas}
-Ubuntu, Debian y otros GNU/Linux, \LaTeX, Docker, Ansible, Terraform
+Ubuntu, Debian y otros GNU/Linux, \LaTeX, Docker, Ansible, Terraform, Kubernetes, Cluster API, Helm
 %
 \section{links de interés}
 \href{https://www.linkedin.com/in/juanpsm/}{\texttt{linkedin/juanpsm}}
@@ -75,7 +75,7 @@ Apasionado por la aventura, estoy dispuesto a emprender nuevos destinos.
   {Mikroways}
   {La Plata, Argentina}
   {\jobtitle{DevOps Engineer}\\
-   }
+   Administrar la infraestructura en entornos de Cloud Computing o híbridos, aprovisionar los recursos o infraestructura requeridos para los proyectos, Integración y despliegue continuo. Dictado de capacitaciones sobre las tecnologías utilizadas.}
 \entry
   {\scalebox{.8}[1.0]{2020--2021}}
   {Facultad de Informática, UNLP}
@@ -84,13 +84,6 @@ Apasionado por la aventura, estoy dispuesto a emprender nuevos destinos.
    Acompañar a los alumnos en la realización de trabajos prácticos en máquina
 bajo supervisión de un docente. Respuesta a consultas en foros de la materia.}
 %------------------------------------------------
-\entry
-  {\scalebox{.8}[1.0]{2010--2021}}
-  {Cuenta propia}
-  {La Plata, Argentina}
-  {\jobtitle{Técnico de PC}\\
-   Armado, reparación y mantenimiento de PC y Notebook. Conocimientos de electrónica. Diagnóstico y reparación de celulares y tablet.}
-%------------------------------------------ ------
 \entry
   {\scalebox{.8}[1.0]{2013--2015}}
   {Tecno Diagonales}
@@ -120,7 +113,7 @@ bajo supervisión de un docente. Respuesta a consultas en foros de la materia.}
 {\scalebox{.8}[1.0]{2014--Actualidad}}
 {Licenciatura en Informática \small \normalfont{(4º año en curso)}}
 {Facultad de Informática, UNLP}
-{Promedio: \textbf{8.45}\\
+{Promedio: \textbf{8.20}\\
 {\small Primer año de la carrera cursado en 2014. Estudios interrumpidos en 2016 por complicaciones laborales. Retomé en 2018.
 }}%------------------------------------------------
 \entry
@@ -177,8 +170,7 @@ Dic. 2003. Examen 4º año de Jóvenes. Escrito: \textbf{81} Oral: \textbf{96}
 \vspace{-0.3cm}
 \section{intereses y expectativas}
   \vspace{-0.2cm}
-\textbf{Back-end} Sectores de análisis de datos y categorización (Natural Language Processing, Machine Learning); optimización de procesos; mantenimiento de servidores y bases de datos; seguridad informática.
-
+\textbf{Back-end} Sectores de análisis de datos y categorización (Natural Language Processing, Machine Learning); optimización de procesos; mantenimiento de servidores y bases de datos; seguridad informática.\\
 \textbf{Front-End} Charts.js. Visualizaciones de datos. Mapas. Apps móbiles, UX, Progressive apps.
 %----------------------------------------------------------------------------------------
 \end{document}
