Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 % -- Encoding UTF-8 without BOM
 % -- XeLaTeX => PDF (BIBER)
 
-\documentclass[espanol, print]{cv-style}     % Add 'print' as an option into the square bracket to remove colours from this template for printing. 
+\documentclass[espanol]{cv-style}     % Add 'print' as an option into the square bracket to remove colours from this template for printing. 
                                       % Add 'espanol' as an option into the square bracket to change the date format of the Last Updated Text
 %\setdefaultlanguage{spanish}
 %\sethyphenation[variant=spanish]{}{}  % Add words between the {} to avoid them to be cut 
@@ -10,16 +10,15 @@
 
 \begin{document}
 
-%\header{Juan Pablo }{Sánchez Magariños}
+\header{Juan Pablo }{Sánchez Magariños}
 %\lastupdated
 
 %----------------------------------------------------------------------------------------
 % SIDEBAR SECTION  -- In the aside, each new line forces a line break
 %----------------------------------------------------------------------------------------
 \begin{aside}
-{\Huge \textbf{Juan Pablo Sánchez Magariños}}
 \section{-}
-%\includegraphics[width=4cm]{22}
+\includegraphics[width=4cm]{22}
 %
 \section{datos personales}
 33 años, argentino
